<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    
    
    <TextView 
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_calculations_based_on_a_fully_loaded_multirotor_" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/with_battery_camera_and_any_extra_equipment_" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        
        <EditText 
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        
        <Button 
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_thrust"/>
        
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/number_of_motors"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Spinner 
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rotor_number"/>
    
    
    
    <TextView 
        android:id="@+id/finalThrust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculating_thrust"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    
    
    

</LinearLayout>
</ScrollView>